Retail Lending-Production/src/objects/PersonalFinancials__c.object
<CustomObject>
    <fields>
        <fullName>Banker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Banker</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Financials</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Financials_of__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Financials of</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Financials</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Salary_gross__c</fullName>
        <label>salary gross</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Personal Financials</label>
    <nameField>
        <label>Financial details Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Personal Financials</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>